--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>Русская Школа Управления</title>
 
-	<link rel='icon' type='image/png' href='/favicon.ico'>
+	<link rel='icon' type='image/x-icon' href='/favicon.ico'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 	<link rel='stylesheet' href='/global.css'>
