--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         (function(w,d,u){
                 var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
                 var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
-        })(window,document,'https://cdn-ru.bitrix24.ru/b16746940/crm/site_button/loader_3_t0e2lq.js');
+        })(window,document,'https://24.uprav.ru/upload/crm/site_button/loader_38_z1fshv.js');
 </script>
 </body>
 </html>
