--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 	<script>
-			(function(w,d,u){
+			window.onload = (function(w,d,u){
 					var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
 					var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
 			})(window,document,'https://24.uprav.ru/upload/crm/site_button/loader_38_z1fshv.js');
